--- a/PackNow/src/main/resources/templates/layoutBase.html
+++ b/PackNow/src/main/resources/templates/layoutBase.html
@@ -1,21 +1,21 @@
 <!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th=http://www.thymeleaf.org lang="pt-br" class="h-100" data-bs-theme="auto">
-  <head><script th:src="@{/js/color-modes.js}" type="text/javascript"></script>
-
-    <meta charset="utf-8">
+  <head>
+	<meta charset="utf-8">
+	<script th:src="@{/js/color-modes.js}" type="text/javascript"></script>
+	<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+	<link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/sticky-footer-navbar/">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
+	
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.122.0">
     <title>PackNow</title>
     
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/sticky-footer-navbar/">
-
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" type="text/css" />
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
 	<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
 	<link rel="icon" href="/img/favicon_1.ico" type="image/x-icon">
@@ -183,7 +183,7 @@
     </div>
 
     
-<header>
+<header th:fragment ="frag_header">
   <!-- Fixed navbar -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-custom-azul ">
     <div class="container" >
@@ -242,7 +242,7 @@
 	<p style="color: #FFFFFF; margin-bottom: 5px;"> <i class='fas fa-envelope' style="color: #FFFFFF;"></i> contato@gmail.com</p>
   </div>
 </footer>
-<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+
 
     </body>
 </html>
