--- a/PackNow/src/main/resources/templates/pagina1.html
+++ b/PackNow/src/main/resources/templates/pagina1.html
@@ -1,1 +1,17 @@
 <!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+    	<script th:src="@{/js/color-modes.js}" type="text/javascript"></script>
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+    <title>Hello World</title>
+</head>
+
+<body>
+	<div th:insert="~{layoutBase :: header}" ></div>
+    <!-- Conteúdo da página -->
+    <h1>Hello World</h1>
+    <p>Esta é uma nova página.</p>
+</body>
+
+</html>
