--- a/PackNow/src/main/resources/templates/layoutBase.html
+++ b/PackNow/src/main/resources/templates/layoutBase.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th=http://www.thymeleaf.org lang="pt-br" class="h-100" data-bs-theme="auto">
-  <head>
+  <head th:fragment ="frag_head">
 	<meta charset="utf-8">
 	<script th:src="@{/js/color-modes.js}" type="text/javascript"></script>
 	<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+	<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+	<link th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css}" rel="stylesheet" >
 	<link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/sticky-footer-navbar/">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
@@ -17,10 +18,9 @@
     
 
 
-	<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
 	<link rel="icon" href="/img/favicon_1.ico" type="image/x-icon">
 
-    <style>
+    <style th:fragment ="frag_style">
 		.bg-custom-azul {
    			background-color: #075472 !important;
 		}
@@ -35,7 +35,7 @@
 		    border-color: #ffffff;
 		}
 		.btn-outline-laranja:hover {
-		    color: #fff; /* Altera a cor do texto quando o botão é hover para garantir legibilidade */
+		    color: #fff; /* Altera a cor do texto quando o botão é hover  */
 		    background-color: #ec9929; /* Altera a cor de fundo quando o botão é hover */
 		    border-color: #ec9929; /* Mantém a mesma cor de contorno quando o botão é hover */
 		}
@@ -130,7 +130,8 @@
     <!-- Custom styles for this template -->
     <link href="sticky-footer-navbar.css" rel="stylesheet">
   </head>
-  <body class="d-flex flex-column h-100">
+  <!--   tentativa de fragmento no body-->
+<body  th:fragment ="frag_body" class="d-flex flex-column h-100">
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
       <symbol id="check2" viewBox="0 0 16 16">
         <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
@@ -182,67 +183,70 @@
       </ul>
     </div>
 
-    
-<header th:fragment ="frag_header">
-  <!-- Fixed navbar -->
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-custom-azul ">
-    <div class="container" >
-      <a class="navbar-brand " href="#">
-		<img th:src="@{/img/logo_pequeno_1.png}" alt="Logo" style=" margin-left: 0px; width: 85%; ">
-	  </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav me-auto mb-2 mb-md-0">
-          <li class="nav-item" style="margin-right: 10px;">
-				<button class="btn btn-outline-laranja text-light" type="button" data-bs-haspopup="true" aria-expanded="false"><i class="fas fa-home"  style="margin-right: 6px;"></i>Início</button>
-          </li>
-          <li style="margin-right: 10px;">
-		  	<div class="input-group mb-3 ">
-			  <div class="input-group-prepend ">
-			    <button class="btn btn-outline-laranja dropdown-toggle text-light font-weight-bold" type="button" data-bs-toggle="dropdown" data-bs-haspopup="true" aria-expanded="false"> <i class="fas fa-search "style="margin-right: 8px;"></i>Consultar</button>
-			    <div class="dropdown-menu">
-			      <a class="dropdown-item" href="#">Encomenda</a>
-			      <a class="dropdown-item" href="#">Morador</a>
-			      <a class="dropdown-item" href="#">Endereço</a>
-			  </div>
-			</div>
-		  </li>
-          <li >
-		  	<div class="input-group mb-3 ">
-			  <div class="input-group-prepend ">
-			    <button class="btn btn-outline-laranja dropdown-toggle text-light font-weight-bold" type="button" data-bs-toggle="dropdown" data-bs-haspopup="true" aria-expanded="false"> <i class="fas fa-plus " style="margin-right: 4px;"></i> Adicionar</button>
-			    <div class="dropdown-menu">
-			      <a class="dropdown-item" href="#">Encomenda</a>
-			      <a class="dropdown-item" href="#">Morador</a>
-			      <a class="dropdown-item" href="#">Endereço</a>
-			  </div>
-			</div>
-		  </li>
-        </ul>
-		<button class="btn btn-outline-laranja text-light" type="button" data-bs-haspopup="true" aria-expanded="false"><i class="fas fa-sign-in-alt"  style="margin-right: 6px;"></i>Login</button>
-      </div>
-    </div>
-  </nav>
-</header>
+	<div th:fragment ="frag_header" >
+		<header>
+		  <!-- Fixed navbar -->
+		  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-custom-azul ">
+		    <div class="container" >
+		      <a class="navbar-brand " href="#">
+				<img th:src="@{/img/logo_pequeno_1.png}" alt="Logo" style=" margin-left: 0px; width: 85%; ">
+			  </a>
+		      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+		        <span class="navbar-toggler-icon"></span>
+		      </button>
+		      <div class="collapse navbar-collapse" id="navbarCollapse">
+		        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+		          <li class="nav-item" style="margin-right: 10px;">
+						<button class="btn btn-outline-laranja text-light" type="button" data-bs-haspopup="true" aria-expanded="false"><i class="fas fa-home"  style="margin-right: 6px;"></i>Início</button>
+		          </li>
+		          <li style="margin-right: 10px;">
+				  	<div class="input-group mb-3 ">
+					  <div class="input-group-prepend ">
+					    <button class="btn btn-outline-laranja dropdown-toggle text-light font-weight-bold" type="button" data-bs-toggle="dropdown" data-bs-haspopup="true" aria-expanded="false"> <i class="fas fa-search "style="margin-right: 8px;"></i>Consultar</button>
+					    <div class="dropdown-menu">
+					      <a class="dropdown-item" href="#">Encomenda</a>
+					      <a class="dropdown-item" href="#">Morador</a>
+					      <a class="dropdown-item" href="#">Endereço</a>
+					  </div>
+					</div>
+				  </li>
+		          <li >
+				  	<div class="input-group mb-3 ">
+					  <div class="input-group-prepend ">
+					    <button class="btn btn-outline-laranja dropdown-toggle text-light font-weight-bold" type="button" data-bs-toggle="dropdown" data-bs-haspopup="true" aria-expanded="false"> <i class="fas fa-plus " style="margin-right: 4px;"></i> Adicionar</button>
+					    <div class="dropdown-menu">
+					      <a class="dropdown-item" href="#">Encomenda</a>
+					      <a class="dropdown-item" href="#">Morador</a>
+					      <a class="dropdown-item" href="#">Endereço</a>
+					  </div>
+					</div>
+				  </li>
+		        </ul>
+				<button class="btn btn-outline-laranja text-light" type="button" data-bs-haspopup="true" aria-expanded="false"><i class="fas fa-sign-in-alt"  style="margin-right: 6px;"></i>Login</button>
+		      </div>
+		    </div>
+		  </nav>
+		</header>		
+	</div> 
+
 
 <!-- Begin page content -->
-<main class="flex-shrink-0">
-  <div class="container ">
-    <h1 class="mt-5">Conteúdo principal</h1>
-    <p class="lead">Lorem ipsum commodo ligula mauris aenean eu aliquam ad, etiam ornare eu maecenas mauris vitae vehicula.</p>
-    <p>Lorem ipsum commodo ligula mauris aenean eu aliquam ad, etiam ornare eu maecenas mauris vitae vehicula. dictum fermentum sapien risus nostra venenatis odio tortor ut pulvinar primis dolor commodo vulputate, tellus ullamcorper magna fermentum duis ante nulla massa leo volutpat porta. scelerisque eu nec interdum aliquam sagittis habitant litora, aptent donec magna turpis condimentum nullam lorem, sodales aenean nam praesent sit non. </p>
-  </div>
-</main>
 
-<footer class="footer mt-auto py-3 bg-body-tertiary  bg-custom-azul">
+	<main>
+		<div class="container" th:fragment ="frag_main">	  
+		
+		</div>
+		<div class="container">
+			<h1 class="mt-5">LayoutBase</h1>
+		</div>
+	</main>
+
+<footer class="footer mt-auto py-3 bg-body-tertiary  bg-custom-azul" th:fragment ="frag_footer" >
   <div class="container">
 	<p style="color: #FFFFFF; margin-bottom: 5px; margin-top: -10x;">IFF BSI - 2023.2</p>
 	<p style="color: #FFFFFF; margin-bottom: 5px;"> <i class='fas fa-envelope' style="color: #FFFFFF;"></i> contato@gmail.com</p>
   </div>
 </footer>
 
-
-    </body>
+</body>
 </html>
