--- a/PackNow/src/main/resources/templates/pagina1.html
+++ b/PackNow/src/main/resources/templates/pagina1.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-    	<script th:src="@{/js/color-modes.js}" type="text/javascript"></script>
-    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
-    <title>Hello World</title>
+	
+    <title>Title da pagina1</title>
+    <link th:replace="~{layoutBase :: frag_head}">
+    <style>
+		main {
+	        margin-top: 105px; /* altura da navbar */
+	    }
+	</style>
 </head>
 
-<body>
-	<div th:insert="~{layoutBase :: header}" ></div>
-    <!-- Conteúdo da página -->
-    <h1>Hello World</h1>
-    <p>Esta é uma nova página.</p>
+<body class="d-flex flex-column h-100">
+	<link th:replace="~{layoutBase :: frag_header}">
+	    <!-- Conteúdo da página -->
+		<main>
+		<div class="container">
+			<h1>Este é o h1 da nova página.</h1>
+			<p>Este é o p1 da nova página.</p>
+			<p>Este é o p2 da nova página.</p>
+			<p>Este é o p3 da nova página.</p>		
+		</div>				
+		</main>
+
+	<footer >
+		<link th:replace="~{layoutBase :: frag_footer}">
+	</footer>
+	
 </body>
 
 </html>
