--- a/PackNow/src/main/resources/templates/layoutBase.html
+++ b/PackNow/src/main/resources/templates/layoutBase.html
@@ -1,252 +1,26 @@
 <!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th=http://www.thymeleaf.org lang="pt-br" class="h-100" data-bs-theme="auto">
-  <head th:fragment ="frag_head">
-	<meta charset="utf-8">
-	<script th:src="@{/js/color-modes.js}" type="text/javascript"></script>
-	<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-	<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
-	<link th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css}" rel="stylesheet" >
-	<link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/sticky-footer-navbar/">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
-	
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.122.0">
-    <title>PackNow</title>
-    
-
-
-	<link rel="icon" href="/img/favicon_1.ico" type="image/x-icon">
-
-    <style th:fragment ="frag_style">
-		.bg-custom-azul {
-   			background-color: #075472 !important;
-		}
-		.bg-custom-amarelo {
-    		background-color: #fec13e!important;
-		}
-		.bg-custom-laranja {
-    		background-color: #ec9929!important;
-		}
-		.btn-outline-laranja{
-		    color: #ec9929;
-		    border-color: #ffffff;
-		}
-		.btn-outline-laranja:hover {
-		    color: #fff; /* Altera a cor do texto quando o botão é hover  */
-		    background-color: #ec9929; /* Altera a cor de fundo quando o botão é hover */
-		    border-color: #ec9929; /* Mantém a mesma cor de contorno quando o botão é hover */
-		}
-	    main {
-	        margin-top: 56px; /* altura da navbar */
-	    }
-	
-	    @media (min-width: 992px) {
-	        main {
-	            margin-top: 68px; /* altura da navbar em telas grandes */
-	        }
-	    }
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-
-      .b-example-divider {
-        width: 100%;
-        height: 3rem;
-        background-color: rgba(0, 0, 0, .1);
-        border: solid rgba(0, 0, 0, .15);
-        border-width: 1px 0;
-        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-      }
-
-      .b-example-vr {
-        flex-shrink: 0;
-        width: 1.5rem;
-        height: 100vh;
-      }
-
-      .bi {
-        vertical-align: -.125em;
-        fill: currentColor;
-      }
-
-      .nav-scroller {
-        position: relative;
-        z-index: 2;
-        height: 2.75rem;
-        overflow-y: hidden;
-      }
-
-      .nav-scroller .nav {
-        display: flex;
-        flex-wrap: nowrap;
-        padding-bottom: 1rem;
-        margin-top: -1px;
-        overflow-x: auto;
-        text-align: center;
-        white-space: nowrap;
-        -webkit-overflow-scrolling: touch;
-      }
-
-      .btn-bd-primary {
-        --bd-violet-bg: #712cf9;
-        --bd-violet-rgb: 112.520718, 44.062154, 249.437846;
-
-        --bs-btn-font-weight: 600;
-        --bs-btn-color: var(--bs-white);
-        --bs-btn-bg: var(--bd-violet-bg);
-        --bs-btn-border-color: var(--bd-violet-bg);
-        --bs-btn-hover-color: var(--bs-white);
-        --bs-btn-hover-bg: #6528e0;
-        --bs-btn-hover-border-color: #6528e0;
-        --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
-        --bs-btn-active-color: var(--bs-btn-hover-color);
-        --bs-btn-active-bg: #5a23c8;
-        --bs-btn-active-border-color: #5a23c8;
-      }
-
-      .bd-mode-toggle {
-        z-index: 1500;
-      }
-
-      .bd-mode-toggle .dropdown-menu .active .bi {
-        display: block !important;
-      }
-    </style>
-
-    
-    <!-- Custom styles for this template -->
-    <link href="sticky-footer-navbar.css" rel="stylesheet">
-  </head>
+	<head>
+		<title>Title do layoutBase</title>
+		<div th:replace="head :: frag_head"></div>
+	</head>
   <!--   tentativa de fragmento no body-->
 <body  th:fragment ="frag_body" class="d-flex flex-column h-100">
-    <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
-      <symbol id="check2" viewBox="0 0 16 16">
-        <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
-      </symbol>
-      <symbol id="circle-half" viewBox="0 0 16 16">
-        <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z"/>
-      </symbol>
-      <symbol id="moon-stars-fill" viewBox="0 0 16 16">
-        <path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"/>
-        <path d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"/>
-      </symbol>
-      <symbol id="sun-fill" viewBox="0 0 16 16">
-        <path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
-      </symbol>
-    </svg>
-
-    <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle ">
-      <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center "
-              id="bd-theme"
-              type="button"
-              aria-expanded="false"
-              data-bs-toggle="dropdown"
-              aria-label="Toggle theme (auto)">
-        <svg class="bi my-1 theme-icon-active" width="1em" height="1em"><use href="#circle-half"></use></svg>
-        <span class="visually-hidden" id="bd-theme-text">Toggle theme</span>
-      </button>
-      <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="bd-theme-text">
-        <li>
-          <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light" aria-pressed="false">
-            <svg class="bi me-2 opacity-50" width="1em" height="1em"><use href="#sun-fill"></use></svg>
-            Light
-            <svg class="bi ms-auto d-none" width="1em" height="1em"><use href="#check2"></use></svg>
-          </button>
-        </li>
-        <li>
-          <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark" aria-pressed="false">
-            <svg class="bi me-2 opacity-50" width="1em" height="1em"><use href="#moon-stars-fill"></use></svg>
-            Dark
-            <svg class="bi ms-auto d-none" width="1em" height="1em"><use href="#check2"></use></svg>
-          </button>
-        </li>
-        <li>
-          <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="auto" aria-pressed="true">
-            <svg class="bi me-2 opacity-50" width="1em" height="1em"><use href="#circle-half"></use></svg>
-            Auto
-            <svg class="bi ms-auto d-none" width="1em" height="1em"><use href="#check2"></use></svg>
-          </button>
-        </li>
-      </ul>
-    </div>
-
-	<div th:fragment ="frag_header" >
-		<header>
-		  <!-- Fixed navbar -->
-		  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-custom-azul ">
-		    <div class="container" >
-		      <a class="navbar-brand " href="#">
-				<img th:src="@{/img/logo_pequeno_1.png}" alt="Logo" style=" margin-left: 0px; width: 85%; ">
-			  </a>
-		      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-		        <span class="navbar-toggler-icon"></span>
-		      </button>
-		      <div class="collapse navbar-collapse" id="navbarCollapse">
-		        <ul class="navbar-nav me-auto mb-2 mb-md-0">
-		          <li class="nav-item" style="margin-right: 10px;">
-						<button class="btn btn-outline-laranja text-light" type="button" data-bs-haspopup="true" aria-expanded="false"><i class="fas fa-home"  style="margin-right: 6px;"></i>Início</button>
-		          </li>
-		          <li style="margin-right: 10px;">
-				  	<div class="input-group mb-3 ">
-					  <div class="input-group-prepend ">
-					    <button class="btn btn-outline-laranja dropdown-toggle text-light font-weight-bold" type="button" data-bs-toggle="dropdown" data-bs-haspopup="true" aria-expanded="false"> <i class="fas fa-search "style="margin-right: 8px;"></i>Consultar</button>
-					    <div class="dropdown-menu">
-					      <a class="dropdown-item" href="#">Encomenda</a>
-					      <a class="dropdown-item" href="#">Morador</a>
-					      <a class="dropdown-item" href="#">Endereço</a>
-					  </div>
-					</div>
-				  </li>
-		          <li >
-				  	<div class="input-group mb-3 ">
-					  <div class="input-group-prepend ">
-					    <button class="btn btn-outline-laranja dropdown-toggle text-light font-weight-bold" type="button" data-bs-toggle="dropdown" data-bs-haspopup="true" aria-expanded="false"> <i class="fas fa-plus " style="margin-right: 4px;"></i> Adicionar</button>
-					    <div class="dropdown-menu">
-					      <a class="dropdown-item" href="#">Encomenda</a>
-					      <a class="dropdown-item" href="#">Morador</a>
-					      <a class="dropdown-item" href="#">Endereço</a>
-					  </div>
-					</div>
-				  </li>
-		        </ul>
-				<button class="btn btn-outline-laranja text-light" type="button" data-bs-haspopup="true" aria-expanded="false"><i class="fas fa-sign-in-alt"  style="margin-right: 6px;"></i>Login</button>
-		      </div>
-		    </div>
-		  </nav>
-		</header>		
-	</div> 
+   
+<header>
+	<div th:replace="header :: frag_header"></div>
+</header>
 
 
 <!-- Begin page content -->
-
 	<main>
-		<div class="container" th:fragment ="frag_main">	  
-		
-		</div>
+	  		
 		<div class="container">
 			<h1 class="mt-5">LayoutBase</h1>
 		</div>
 	</main>
 
-<footer class="footer mt-auto py-3 bg-body-tertiary  bg-custom-azul" th:fragment ="frag_footer" >
-  <div class="container">
-	<p style="color: #FFFFFF; margin-bottom: 5px; margin-top: -10x;">IFF BSI - 2023.2</p>
-	<p style="color: #FFFFFF; margin-bottom: 5px;"> <i class='fas fa-envelope' style="color: #FFFFFF;"></i> contato@gmail.com</p>
-  </div>
-</footer>
+	<div th:insert="footer :: frag_footer"></div>
 
 </body>
 </html>
