--- a/PackNow/src/main/resources/templates/header.html
+++ b/PackNow/src/main/resources/templates/header.html
@@ -80,8 +80,8 @@
 					    <button class="btn btn-outline-laranja dropdown-toggle text-light font-weight-bold" type="button" data-bs-toggle="dropdown" data-bs-haspopup="true" aria-expanded="false"> <i class="fas fa-search "style="margin-right: 8px;"></i>Consultar</button>
 					    <div class="dropdown-menu">
 						<a class="dropdown-item" th:href="@{/visualizar-encomendas}">Encomenda</a>
-					      <a class="dropdown-item" th:href="@{/visualizar-moradores}">Morador</a>
-					      <a class="dropdown-item" th:href="@{/visualizar-enderecos}">Endereço</a>
+					      <a class="dropdown-item" th:href="@{/morador/listar}">Morador</a>
+					      <a class="dropdown-item" th:href="@{/endereco/listar}">Endereço</a>
 					  </div>
 					</div>
 				  </li>
@@ -91,8 +91,8 @@
 					    <button class="btn btn-outline-laranja dropdown-toggle text-light font-weight-bold" type="button" data-bs-toggle="dropdown" data-bs-haspopup="true" aria-expanded="false"> <i class="fas fa-plus " style="margin-right: 4px;"></i> Adicionar</button>
 					    <div class="dropdown-menu">
 					      <a class="dropdown-item" th:href="@{/adicionar-encomenda}">Encomenda</a>
-					      <a class="dropdown-item" th:href="@{/adicionar-morador}">Morador</a>
-					      <a class="dropdown-item" th:href="@{/adicionar-endereco}">Endereço</a>
+					      <a class="dropdown-item" th:href="@{/morador/adicionar}">Morador</a>
+					      <a class="dropdown-item" th:href="@{/endereco/adicionar}">Endereço</a>
 					  </div>
 					</div>
 				  </li>
