--- a/PackNow/src/main/resources/templates/morador/visualizar-moradores.html
+++ b/PackNow/src/main/resources/templates/morador/visualizar-moradores.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Title da pagina1</title>
+    <title>Visualizar moradores</title>
 	<div th:replace="~{head :: frag_head}"></div>
-				<!-- Adicionando o jQuery -->
+			<!-- Adicionando o jQuery -->
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
@@ -18,7 +18,6 @@
 	    <!-- Conteúdo da página -->
 <main>
  <div class="container">
-	 	  <!-- Barra de pesquisa -->
 		<div  class="row">
 				<div class="col-md-4">
 				  	<h1><b>Lista de moradores</b></h1>
@@ -26,8 +25,9 @@
   				<div class="col-md-4 offset-md-4">
 				</div>		
 		</div>
-    <table id="enderecosTable" class="table table-striped">
-		<div  class="row">
+    <table id="moradoresTable" class="table table-striped">
+			<!-- Barra de pesquisa -->
+			<div  class="row">
 			<div class="col-md-4"></div>
   				<div class="col-md-4 offset-md-4">
 					<div class="d-flex align-items-center">
@@ -39,33 +39,28 @@
       <thead class="thead-dark">
         <tr>
           <th>Id</th>
-          <th>Bloco</th>
-          <th>Número</th>
-          <th style="text-align: center;">Ações</th>
+          <th>Nome</th>
+          <th>CPF</th>
+          <th>Telefone</th>
+          <th>Endereço</th>
+          <th>Ações</th>
         </tr>
       </thead>
       <tbody>
         <!-- tabela com os dados dos moradores -->
-        <tr>
-          <td>1</td>
-          <td>1</td>
-          <td>101</td>
-          <td style="text-align: center;">
+        <tr th:each="morador: ${morador_lista}">
+          <td th:text="${morador.id}"></td>
+          <td th:text="${morador.nome}"></td>
+          <td th:text="${morador.cpf}"></td>
+          <td th:text="${morador.telefone}"></td>
+          <td th:text=" 'Bloco: ' + ${morador.endereco.bloco +' Número: '+  morador.endereco.numero}"></td>
+          <td>
             <!-- Botões de editar e deletar -->
             <button class="btn btn-primary">Editar</button>
             <button class="btn btn-danger">Deletar</button>
           </td>
         </tr>
-         <tr>
-          <td>2</td>
-          <td>1</td>
-          <td>102</td>
-          <td style="text-align: center;">
-            <!-- Botões de editar e deletar -->
-            <button class="btn btn-primary">Editar</button>
-            <button class="btn btn-danger">Deletar</button>
-          </td>
-        </tr>
+        
       </tbody>
     </table>
   </div>							
@@ -81,7 +76,7 @@
 	    // Adicionando funcionalidade de pesquisa
 	    $('#searchInput').on('keyup', function(){
 	      var searchText = $(this).val().toLowerCase();
-	      $('#enderecosTable tbody tr').each(function(){
+	      $('#moradoresTable tbody tr').each(function(){
 	        var rowData = $(this).text().toLowerCase();
 	        if(rowData.indexOf(searchText) == -1){
 	          $(this).hide();
