--- a/PackNow/src/main/resources/templates/morador/adicionar-morador.html
+++ b/PackNow/src/main/resources/templates/morador/adicionar-morador.html
@@ -13,43 +13,34 @@
     </header>
     <!-- Conteúdo da página -->
     <main>
-        <div class="container">
-            <h1>Entre com as informações do morador</h1>
-            <form action="#" th:action ="@{registrar}" th:object="${morador}" method="post">
-                <div class="form-group">
-                    <label for="nome">Nome:</label>
-                    <input type="text" class="form-control " id="nome" th:field="*{nome}">
-                </div>
-                <div class="form-group">
-                    <label for="cpf">CPF:</label>
-                    <input type="text" class="form-control" id="cpf" th:field="*{cpf}">
-                </div>
-                <div class="form-group">
-                    <label for="telefone">Telefone:</label>
-                    <input type="text" class="form-control" id="telefone" th:field="*{telefone}">
-                </div>
-            <div class="form-group">
-                <label for="endereco"><b>Endereço</b></label>
-                <div class="btn-group" style="padding-top: 10px;">
-                    <select class="form-control"  id="bloco" th:field="*{endereco.bloco}">
-                        <option value="">Selecione um bloco</option>
-                        <option th:each="bloco : ${bloco_lista}" th:value="${bloco}" th:text="${bloco}"></option>
-                    </select>
-                </div>
-                <div class="form-group" style="padding-top: 10px;">
-                    <label for="numero">Informe o número do endereço:</label>
-                    <input type="text" class="form-control" id="numero" th:field="*{endereco.numero}">
-                </div>
-            </div>
-	            <div style="padding-top: 10px;">
-					<input class="btn btn-primary" type="submit" value="Adicionar">
-	                <a  href="#" class="btn btn-secondary">Voltar</a>
-				</div>
-            </form>
-            <br>
+	 <div class="container">
+	    <h1>Entre com as informações do morador</h1>
+	    <h3>Morador</h3>
+	    <form th:action="@{/morador/registrar}" th:object="${morador}" method="post">
+	        <label for="nome">Nome:</label>
+	        <input type="text" class="form-control" style="width: 350px; border-color: black" id="nome" name="nome"><br>
+	        <label for="cpf">CPF:</label>
+	        <input type="text" class="form-control" style="width: 350px; border-color: black" id="cpf" name="cpf"><br>
+	        <label for="telefone">Telefone:</label>
+	        <input type="text" class="form-control" style="width: 350px; border-color: black"  id="telefone" name="telefone"><br>
+	
+	        
+			<label for="enderecoId"><h3>Selecione o Endereço:</h3></label>
+
+			<div class="dropdown">
+			    <select class="btn btn-primary" style=" width: 250px;" id="enderecoId" name="enderecoId" data-toggle="dropdown">
+			        <option value="" selected>Escolha o endereço</option>
+			        <option th:each="endereco : ${enderecos}" th:value="${endereco.id}" th:text="${'Bloco ' + endereco.bloco + ' - Número ' + endereco.numero}"></option>
+			    </select>
+			</div>
 
 
-        </div>
+	    <br>	
+	        <input  class="btn btn-primary" type="submit" value="Adicionar">
+	       	<a  href="#" class="btn btn-secondary">Voltar</a>
+	    </form>
+	    <br>
+	</div>
     </main>
     <div th:insert="~{footer :: frag_footer}"></div>
 
