--- a/PackNow/src/main/resources/templates/error.html
+++ b/PackNow/src/main/resources/templates/error.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Sucesso</title>
+    <title>Erro</title>
 	<div th:replace="~{head :: frag_head}"></div>
 
 </head>
