--- a/PackNow/src/main/resources/templates/header.html
+++ b/PackNow/src/main/resources/templates/header.html
@@ -82,6 +82,7 @@
 						<a class="dropdown-item" th:href="@{/visualizar-encomendas}">Encomenda</a>
 					      <a class="dropdown-item" th:href="@{/morador/listar}">Morador</a>
 					      <a class="dropdown-item" th:href="@{/endereco/listar}">Endereço</a>
+					      <a class="dropdown-item" th:href="@{/funcionario/listar}">Funcionário</a>
 					  </div>
 					</div>
 				  </li>
@@ -93,6 +94,7 @@
 					      <a class="dropdown-item" th:href="@{/adicionar-encomenda}">Encomenda</a>
 					      <a class="dropdown-item" th:href="@{/morador/adicionar}">Morador</a>
 					      <a class="dropdown-item" th:href="@{/endereco/adicionar}">Endereço</a>
+					      <a class="dropdown-item" th:href="@{/funcionario/adicionar}">Funcionário</a>
 					  </div>
 					</div>
 				  </li>
